# RTMPDemo

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  ImageUtils.cpp  JavaCallHelper.cpp  JavaCallHelper.h  JavaCallOnStateChangedCallback.cpp  JavaCallOnStateChangedCallback.h  PacketCallBack.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp
app/src/main/res/layout/: activity_camera.xml
app/src/main/res/values/: strings.xml  themes.xml
common/: build.gradle
common/src/main/: AndroidManifest.xml
common/src/main/res/layout/: activity_path.xml  item_path.xml
gradle/wrapper/: gradle-wrapper.properties
opengl/: build.gradle
opengl/src/main/: AndroidManifest.xml
opengl/src/main/cpp/: CMakeLists.txt  FaceTrack.cpp  FaceTrack.h  native-lib.cpp
opengl/src/main/res/drawable/: record_button_background.xml  record_button_background_pressed.xml  record_button_background_sel.xml
opengl/src/main/res/layout/: activity_main.xml  activity_splash.xml
opengl/src/main/res/raw/: base_frag.frag  beauty_frag.frag  bigeye_frag.frag  camera_frag.frag  camera_vert.vert  split2_screen.frag  split3_screen.frag
opengl/src/main/res/values-night/: themes.xml
rtmp_show/: build.gradle
rtmp_show/src/main/: AndroidManifest.xml
rtmp_show/src/main/cpp/: CMakeLists.txt  H264.cpp  H264.h  h264_decode_sps.h  native-lib.cpp
rtmp_show/src/main/res/layout/: activity_main.xml  activity_play.xml
rtmp_show/src/main/res/values/: strings.xml
(+46 files in other folders)
